Add fuzzywuzzy dependency to production requirements

--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -14,3 +14,7 @@ bytez>=0.0.0
 # GitHub App authentication
 PyJWT>=2.8.0
 cryptography>=41.0.0
+
+# Text matching
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.21.0
