--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ requests>=2.28.0
 # Code analysis dependencies
 tree-sitter>=0.20.0
 tree-sitter-python>=0.20.0
+tree-sitter-java>=0.20.0
+tree-sitter-cpp>=0.20.0
 
 # Filtering utilities
 fuzzywuzzy>=0.18.0
