fix: Add supabase to production requirements
The feedback_system.py requires supabase but it was only in
requirements.txt (dev), not requirements-prod.txt (Docker build).

--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -24,3 +24,6 @@ python-Levenshtein>=0.21.0
 
 # Vector Database for PR memory
 chromadb>=0.4.0
+
+# Supabase for feedback system and vector storage
+supabase>=2.0.0
