--- a/requirements.txt
+++ b/requirements.txt
@@ -45,5 +45,8 @@ cryptography>=41.0.0
 # Vector Database
 chromadb>=0.4.0
 
+# FREE local embeddings (no API key needed!)
+sentence-transformers>=2.2.0
+
 # Supabase for feedback storage
 supabase>=2.0.0
