--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ requests>=2.28.0
 # Code analysis dependencies
 tree-sitter>=0.20.0
 tree-sitter-python>=0.20.0
+tree-sitter-java>=0.20.0
+tree-sitter-cpp>=0.20.0
 
 # Filtering utilities
 fuzzywuzzy>=0.18.0
@@ -42,3 +44,9 @@ cryptography>=41.0.0
 
 # Vector Database
 chromadb>=0.4.0
+
+# FREE local embeddings (no API key needed!)
+sentence-transformers>=2.2.0
+
+# Supabase for feedback storage
+supabase>=2.0.0
